--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -39,12 +39,18 @@
                         <li class="nav-item"  th:classappend="${#strings.startsWith(view,'/report-center')? 'active' : ''}">
                             <a class="nav-link mx-2" href="/report-center">实验报告中心</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link mx-2" href="/question">
                                 题库
                                 <span th:if="${#strings.startsWith(view,'/#')}" class="sr-only">(current)</span>
                             </a>
                         </li>
+
+                        <li shiro:hasRole="Admin" class="nav-item"  th:classappend="${#strings.startsWith(view,'/report-center')? 'active' : ''}">
+                            <a class="nav-link mx-2" href="/report-center">题目审核中心</a>
+                        </li>
+
                     </ul>
                     <form shiro:guest="" class="form-inline my-2 my-md-0">
                         <a href="/register" class="btn btn-primary py-1 mx-1">注册</a>
