添加题目审核的各个页面内容

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -48,7 +48,7 @@
                         </li>
 
                         <li shiro:hasRole="Admin" class="nav-item"  th:classappend="${#strings.startsWith(view,'/report-center')? 'active' : ''}">
-                            <a class="nav-link mx-2" href="/report-center">题目审核中心</a>
+                            <a class="nav-link mx-2" href="/editQuestoinAll">题目审核中心</a>
                         </li>
 
                     </ul>
