--- a/src/main/resources/templates/questionUploadAll.html
+++ b/src/main/resources/templates/questionUploadAll.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorator="base">
 <head>
     <title>题库页面</title>
@@ -13,14 +13,9 @@
 
 <th:block layout:fragment="content">
     <div class="card my-4 p-3 shadow-sm" style="background: #fff; border-radius: 10px; flex: 1; width: 80%;margin-left: auto;margin-right: auto">
-		<h5 class="text-center">
+        <h5 class="text-center">
             <i class="far fa-list-alt" style="font-size:90%"></i>
             题目列表
-
-            <div class="float-right">
-                <a th:href='@{/questionDetail(id=${question_id})}' class="btn btn-primary btn-sm"><i class="fas fa-plus"></i>&nbsp;最近做题处</a>
-                <a th:href='@{/questionUpload}' class="btn btn-primary btn-sm"><i class="fas fa-plus"></i>&nbsp;上传题目</a>
-            </div>
         </h5>
         <table class="ui selectable compact celled stripped table" style="margin-top: 4px; width:100%; overflow-y:scroll; ">
             <thead>
@@ -36,7 +31,7 @@
                 <td class="center aligned" th:text="${question.title}">这是一道物理实验题</td>
                 <td class="center aligned">
                     <div class="ui buttons">
-                        <a th:href='@{/questionDetail(id=${question.id})}'>
+                        <a th:href='@{/editQuestionDetail(id=${question.id})}'>
                             <button class="ui green basic button enter-question" style="padding: .45em .8em">进入做题</button>
                         </a>
                     </div>
