--- a/src/main/resources/templates/questionUploadAll.html
+++ b/src/main/resources/templates/questionUploadAll.html
@@ -32,7 +32,7 @@
                 <td class="center aligned">
                     <div class="ui buttons">
                         <a th:href='@{/editQuestionDetail(id=${question.id})}'>
-                            <button class="ui green basic button enter-question" style="padding: .45em .8em">进入做题</button>
+                            <button class="ui green basic button enter-question" style="padding: .45em .8em">进入审核</button>
                         </a>
                     </div>
                 </td>
