修改做题页面抖动bug

--- a/src/main/resources/templates/questionCheck.html
+++ b/src/main/resources/templates/questionCheck.html
@@ -75,7 +75,7 @@
 
     </th:block>
 
-    <div class = "row">
+    <div class = "row"  style="margin: 0">
 
 
         <div style="margin-left: auto;margin-right: auto;margin-top: 20px" class="ui buttons">
