--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -119,7 +119,7 @@
 
     </th:block>
 
-    <div class = "row">
+    <div class = "row" style="margin: 0">
         <div style="margin-left: auto;margin-right: auto;margin-top: 20px" class="ui buttons">
             <a th:href='@{/questionDetail(id=${question.id} - 1)}'>
                 <button type="button" class="ui green basic button enter-question">
